# arqui_fotos

./: README.md
Practica1/: CMakeLists.txt
Practica1/common/: CMakeLists.txt  binaryio.cpp  binaryio.hpp  progargs.cpp  progargs.hpp
Practica1/imgaos/: CMakeLists.txt  imageaos.cpp  imageaos.hpp
Practica1/imgsoa/: CMakeLists.txt  imagesoa.cpp  imagesoa.hpp
Practica1/imtool-aos/: CMakeLists.txt  main.cpp
Practica1/imtool-soa/: CMakeLists.txt  main.cpp
Practica1/test/: CMakeLists.txt  ftest-aos.cpp  ftest-soa.cpp  utest-common.cpp  utest-imgaos.cpp  utest-imgsoa.cpp
